--- a/style.css
+++ b/style.css
@@ -154,7 +154,53 @@ button:hover{
 
 #id-result {
   display: none;
-  transition: opacity 1s ease-out;
+  transition: opacity 1s ease-in;
   opacity: 0;
 
+}
+
+@media (max-width:800px) {
+
+  h1{
+    width: 350px;
+    margin: 0 auto;
+    font-size: 1.3rem;
+   
+  }
+body{
+  background-size: auto auto;
+}
+  h2{
+    font-size: 0.8rem;
+  }
+
+  .colorResult {
+    color: #F9D949;
+    -webkit-transition: 0.5s;
+    font-size: 1.2rem;
+  }
+  .resultadoContainer{
+    width: 300px;
+    height: auto;
+    margin: 0 auto;
+    border-radius: 3px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 5px;
+    padding-right: 5px;
+    border: solid #BEBEC7 transparent;
+    background-color: rgba(0, 0, 0, 0.125);
+    
+  }
+
+  .resultadoContainer p{
+    font-weight: bold;
+    font-size: 16px;
+  }
+  
+  .container{
+    margin-top: 20px;
+    width: 260px;
+    height: 670px;
+  }
 }
