--- a/style.css
+++ b/style.css
@@ -6,30 +6,45 @@ li,
 blockquote {
   padding: 0px;
   margin: 0px;
-  font-family: 'Anonymous Pro', monospace;;
+  font-family: "Anonymous Pro", monospace;
 }
 
-div{
+li {
+  list-style: none;
+}
+
+button {
+  cursor: pointer;
+}
+
+div {
   margin: 0px;
   padding: 0px;
 }
 
-input{
+input {
   border-radius: 3px;
   padding: 4px;
-  background: transparent;
+  background: aliceblue;
 }
 
-input[type=number]{
+input[type="number"] {
   box-sizing: border-box;
   border: 3px solid #ccc;
   -webkit-transition: 0.5s;
   transition: 0.5s;
   outline: none;
   -moz-appearance: textfield;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 21px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 20px;
+}
 
+.inputs li:first-child {
+  margin-bottom: 1rem;
+}
+
+.titulo {
+  margin-bottom: 2rem;
 }
 
 input::-webkit-outer-spin-button,
@@ -38,51 +53,48 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
-input[type=number]:focus {
-  border: 3px solid #068FFF;
+input[type="number"]:focus {
+  border: 3px solid #068fff;
   background-color: white;
 }
 
-input[type=number]:hover {
-  border: 3px solid #068FFF;
+input[type="number"]:hover {
+  border: 3px solid #068fff;
   background-color: white;
 }
 
-
-::placeholder{
-color: white;
+::placeholder {
+  font-size: 0.9rem;
+  color: rgba(0, 0, 0, 0.5);
 }
 
-h1,h3,span,input,p{
+h1,
+h3,
+span,
+input,
+p {
   color: aliceblue;
 }
 
-h3{
+h3 {
   margin-top: 30px;
   margin-bottom: 8px;
 }
 
-
-
-
-body{
+body {
   background-image: url(./img/background-water.jpg);
   background-repeat: no-repeat, repeat;
   background-size: cover;
-
 }
 .imagem {
   display: inline-block;
   width: 45%;
-
-
 }
 
-.titulo{
+.titulo {
   justify-items: end;
-
 }
-.container{
+.container {
   display: grid;
   margin-top: 60px;
   grid-template-rows: 300px 1fr 1fr;
@@ -91,69 +103,60 @@ body{
   justify-content: center;
   justify-items: center;
   padding: 60px;
-  margin-left: auto; 
+  margin-left: auto;
   margin-right: auto;
   width: 600px;
   height: 750px;
   border-radius: 5px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  
-
-
 }
 
-
-.resultadoContainer{
+.resultadoContainer {
   border-radius: 3px;
   padding-top: 15px;
   padding-bottom: 15px;
   padding-left: 40px;
   padding-right: 40px;
-  border: solid #BEBEC7 transparent;
+  border: solid #bebec7 transparent;
   background-color: rgba(0, 0, 0, 0.125);
-  
 }
 
-.resultadoContainer p{
+.resultadoContainer p {
   font-weight: bold;
   font-size: 18px;
 }
 
-button{
+button {
   border-radius: 5px;
   margin-top: 20px;
   margin-bottom: 20px;
   padding: 8px 16px 8px 16px;
-
 }
 
-button:hover{
+button:hover {
   color: white;
   background-color: rgba(49, 86, 245, 0.6);
-
 }
 
-.conteudo{
+.conteudo {
   text-align: center;
   width: 400px;
   height: 300px;
-  
 }
 
-.gray{
+.gray {
   margin-left: 10px;
-  color: #BEBEC7;
+  color: #bebec7;
 }
 
 .colorResult {
-  color: #F9D949;
+  color: #f9d949;
   -webkit-transition: 0.5s;
 
   font-size: 1.75rem;
-
 }
 
-.containerResult{
+.containerResult {
   padding: 0px;
 }
 
@@ -161,30 +164,30 @@ button:hover{
   display: none;
   transition: opacity 1s ease-in;
   opacity: 0;
-
 }
 
-@media (max-width:800px) {
-
-  h1{
+@media (max-width: 800px) {
+  .titulo {
+    margin-bottom: 1rem;
+  }
+  h1 {
     width: 350px;
     margin: 0 auto;
     font-size: 1.3rem;
-   
   }
-body{
-  background-size: auto auto;
-}
-  h2{
+  body {
+    background-size: auto auto;
+  }
+  h2 {
     font-size: 0.8rem;
   }
 
   .colorResult {
-    color: #F9D949;
+    color: #f9d949;
     -webkit-transition: 0.5s;
     font-size: 1.2rem;
   }
-  .resultadoContainer{
+  .resultadoContainer {
     width: 300px;
     height: auto;
     margin: 0 auto;
@@ -193,17 +196,16 @@ body{
     padding-bottom: 8px;
     padding-left: 5px;
     padding-right: 5px;
-    border: solid #BEBEC7 transparent;
+    border: solid #bebec7 transparent;
     background-color: rgba(0, 0, 0, 0.125);
-    
   }
 
-  .resultadoContainer p{
+  .resultadoContainer p {
     font-weight: bold;
     font-size: 16px;
   }
-  
-  .container{
+
+  .container {
     margin-top: 20px;
     width: 260px;
     height: 670px;
